<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Names/Titles -->

    <string name="app_name">IMT4072_Project</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Default values -->

    <string name="default_image_text">No image to display! \nOpen image via File to start altering it.</string>
    <string name="default_settings_text">You are now displaying settings!</string>
    <string name="contentDescription">Image to edit.</string>
    <string name="tvSetPixelSize">Select pixel size for colour grid:</string>
    <string name="inputPixelSize">Numeric value&#8230;</string>
    <string name="default_spinner">Default</string>
    <string name="get_image_intent_title">Select an image to alter</string>
    
    <!-- Message telling the user that the selected image is loading -->
    <string name="selected_image_is_loading">Loading image&#8230;</string>
    
    <!-- Message telling the user that the image was saved successfully -->
    <string name="image_changes_saved">Changes was saved successfully!</string>
    
    <!-- ActionBar buttons -->

    <string name="action_file">File</string>
    <string name="action_open_image">Open image</string>
    <string name="action_save_image">Save image</string>
    <string name="action_alter_image">Alter image</string>
    <string name="action_settings">Settings</string>

    <!-- Settings screen: Textview -->

    <string name="tvDefaultColourProfile">Use default colour profile?</string>
    <string name="tvOverwriteOriginalImage">Overwrite original image when saving?</string>
    <string name="tvNotificationOverwrite">Notify about original being overwritten?</string>
    <string name="tvEnableUndoFunction">Enable Undo function (not implemented)</string>

    <!-- AlertDialog Messagebox -->

    <string name="messagebox_saveImage_title">Save changes?</string>
    <string name="messagebox_saveImage_message">Changes to image has not been saved.\nDo you want to save changes?</string>
    <string name="messagebox_saveImage_posButton">Save changes</string>
    <string name="messagebox_saveImage_negButton">Don\'t save</string>
    
    <!-- Error messages -->
    
    <string name="exception_failed_loading_image">Error: Could not load image!</string>
    <string name="exception_out_of_memory">Sorry! Out of memory, application needs to be closed.</string>

</resources>